add menu, parallax, another styling

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,22 +7,73 @@
 @import 'typography';
 @import 'blocks/index';
 
-header {
-  @apply transition-all duration-500 z-20;
+.disable-scroll {
+  @apply overflow-y-hidden;
+  scrollbar-gutter: stable;
+  
+  header {
+    transition: none !important;
+  }
+
+  .menu-panel .top-container, header {
+    padding-right: calc(20px + var(--scrollbar-size));
+    @screen md {
+      padding-right: calc(30px + var(--scrollbar-size));
+    }
+  }
+}
+
+.menu-panel, header {
   .menu {
     .btn-menu {
       span {  
-        @apply h-[3px] w-[60px] lg:w-[70px] bg-white mb-3 last:mb-0 block;
+        @apply h-[3px] w-[60px] lg:w-[70px] bg-white block transition-all duration-500;
+      }
+    }
+  }
+  &.opened {
+    .btn-menu {
+      span {
+        &:nth-child(1) {
+          @apply rotate-45 m-0;
+        }
+        &:nth-child(2) {
+          @apply -rotate-45 mt-[-3px];
+        }
+      }
+    }
+  }
+}
+
+.menu-panel, header.headroom--pinned:not(.headroom--top) {
+  .menu .btn-menu span { 
+    @apply bg-blue;
+  }
+}
+
+header {
+  @apply transition-[top,background] duration-500 z-20;
+
+  .menu {
+    .btn-menu {
+      span {  
+        @apply mb-3 last:mb-0;
       }
     }
   }
 
   .logo {
     a svg {
-      @apply w-[196px] md:w-[235px] lg:w-[274px];
+      @apply w-[196px] h-[53px] md:w-[235px] md:h-[64px] lg:w-[274px] lg:h-[75px];
       * {
         @apply fill-white;
       }
+    }
+  }
+
+  .buttons {
+    .btn-book {
+      @apply border-white;
     }
   }
 
@@ -33,18 +84,25 @@ header {
   &.headroom--pinned:not(.headroom--top) {
     @apply bg-white text-blue;
 
-    .menu .btn-menu span { 
-      @apply bg-blue;
-    }
-
     .logo a svg * {
       @apply fill-blue;
     }
 
     .buttons {
       .btn-book {
-
+        @apply border-blue;
       }
+    }
+  }
+}
+
+.menu-panel {
+  &.active {
+    @apply z-[9999];
+  }
+  .address-container {
+    p a {
+      @apply no-underline;
     }
   }
 }
@@ -83,13 +141,37 @@ footer {
 }
 
 .button {
-  @apply inline-flex items-center leading-none;
+  @apply inline-flex items-center leading-none transition-all duration-500;
   &:not(.text) {
-    @apply rounded-[30px] bg-white text-blue;
+    @apply rounded-[30px] bg-white text-blue border-2 border-blue;
   }
 
   svg {
     @apply fill-blue inline-block ml-[10px];
+  }
+
+  &.no-border {
+    @apply border-none;
+  }
+
+  &.large {
+    @apply btn-text-1 py-[16px] px-8 rounded-[40px];
+
+    &.no-border {
+      @apply py-[18px];
+    }
+  }
+
+  &.medium {
+    @apply btn-text-2 pt-[15px] pb-[13px] px-[30px];
+
+    &.no-border {
+      @apply py-4;
+    }
+  }
+
+  &.small {
+    @apply font-sans-alt leading-5 btn-text-3 text-navy py-[9px] px-[30px] uppercase;
   }
 
   &.dark {
@@ -98,18 +180,6 @@ footer {
     svg {
       @apply fill-white;
     }
-  }
-
-  &.large {
-    @apply btn-text-1 py-5 px-8 rounded-[40px];
-  }
-
-  &.medium {
-    @apply btn-text-2 py-4 px-[30px];
-  }
-
-  &.small {
-    @apply font-sans-alt leading-5 btn-text-3 text-navy py-[9px] px-[30px] uppercase;
   }
 
   &.text {
@@ -123,6 +193,24 @@ footer {
 
 body {
   @apply font-sans text-blue;
+}
+
+.swiper {
+  .swiper-wrapper {
+    @apply pb-[76px];
+  }
+  
+  .swiper-scrollbar {
+    bottom: 0 !important;
+  }
+}
+
+.swiper-blog {
+  &.default {
+    .text-container {
+      @apply bg-white pt-5 px-5 pb-8 h-full;
+    }
+  }
 }
 
 // for block padding
@@ -158,12 +246,29 @@ body {
   @apply pb-[192px] md:pb-[336px] lg:pb-[300px];
 }
 
-.bc-transparent {
+.bc-transparent, .bc-gray {
 
+  .swiper {
+    .swiper-scrollbar {
+      @apply bg-black/20;
+      .swiper-scrollbar-drag {
+        @apply bg-black;  
+      }
+    }
+  }
 }
 
 .bc-light-blue, .bc-blue, .bc-navy {
   @apply text-white;
+
+  .swiper {
+    .swiper-scrollbar {
+      @apply bg-white/20;
+      .swiper-scrollbar-drag {
+        @apply bg-white;  
+      }
+    }
+  }
 }
 
 .bc-light-blue {
@@ -186,6 +291,14 @@ body {
   @apply bg-gray;
 }
 
-.background {
+.background, .parallax-bg {
   @apply bg-no-repeat bg-cover text-white bg-black/30 bg-blend-multiply;
+  background-image: var(--bg-url);
+}
+
+.parallax-bg {
+  @apply w-full h-full absolute top-0 left-0 bg-black/40 z-[-1] bg-repeat bg-top bg-fixed;
+  @screen md {
+    background-size: auto 110%;
+  }
 }
