--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -302,29 +302,27 @@ body {
 }
 
 .background, .parallax-bg {
-  @apply bg-no-repeat bg-cover text-white bg-black/30 bg-blend-multiply;
+  @apply bg-no-repeat bg-cover;
   background-image: var(--bg-url);
 }
 
-.parallax-bg {
-  @apply w-full h-full absolute top-0 left-0 bg-black/40 z-[-1] bg-repeat bg-top bg-fixed;
-  background-size: auto var(--window-height);
-  @screen md {
-    background-size: auto 110%;
-  }
-  @screen lg {
-    @apply lg:bg-cover;
-  }
+.acf-block.has-overlay {
+  @apply bg-black/30 bg-blend-multiply;
 }
 
-.acf-block {
-  .parallax-bg {
-    background-size: auto var(--parallax-height);
-    @screen md {
-      background-size: auto 110%;
-    }
-    @screen lg {
-      @apply lg:bg-cover;
-    }
-  }
+.acf-block:not(.has-overlay) {
+  background-size: 75%; 
+  background-position: right 100px;
+}
+
+.acf-block.has-parallax {
+  @apply relative;
+}
+
+.parallax-outer {
+  @apply absolute top-0 left-0 overflow-hidden w-full h-full;
+}
+
+.parallax-bg {
+  @apply w-full h-[125%] absolute top-0 left-0 bg-black/40 z-[-1];
 }
