--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -51,7 +51,7 @@
     @apply leading-[1.4] tracking-[-0.5px] mb-10 lg:mb-[20px];
   }
 
-  p {
+  p, .p-style {
     @apply text-[18px] md:text-[20px] lg:text-[20px];
     @apply leading-[1.3] tracking-normal mb-[12px] last:mb-0;
 
@@ -59,11 +59,11 @@
       @apply mb-0;
     }
 
-    &.p2 {
+    &.p2, span.p2 {
       @apply text-[16px] md:text-[16px] lg:text-[16px];
     }
 
-    &.p3 {
+    &.p3, span.p3 {
       @apply text-[12px] md:text-[12px] lg:text-[12px];
     }
 
