--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -46,9 +46,9 @@
   }
 
   h6 {
-    @apply text-[20px] md:text-[22px] lg:text-[20px];
+    @apply text-[20px] md:text-[20px] lg:text-[20px];
     //@include pixelsToResponsiveUnit(font-size, 50px, 78px, 78px);
-    @apply leading-[1.4] tracking-[-0.5px] mb-10 lg:mb-[20px];
+    @apply leading-[1.4] tracking-[-0.5px] mb-5;
   }
 
   p, .p-style {
