--- a/src/scss/blocks/_image-masonry.scss
+++ b/src/scss/blocks/_image-masonry.scss
@@ -1,1 +1,20 @@
-.block-image-masonry {}
+.block-image-masonry {
+    .grid-masonry {
+        .grid-item:nth-child(odd) {
+            img {
+                @apply justify-self-end;
+            }
+        }
+    
+        &.right {
+            .grid-item:nth-child(2) {
+                @apply md:mt-[150px] lg:mt-[220px];
+            }
+        }
+        &.left {
+            .grid-item:nth-child(1) {
+                @apply md:mt-[150px] lg:mt-[220px];
+            }
+        }
+    }
+}
