--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -345,7 +345,7 @@ body {
   @apply bg-gray;
 }
 
-.background, .parallax-bg {
+.background:not(.has-fixed-bg), .parallax-bg {
   @apply bg-no-repeat bg-cover;
   background-image: var(--bg-url);
 }
@@ -354,9 +354,18 @@ body {
   @apply bg-black/30 bg-blend-multiply;
 }
 
+.bg-fixed {
+  @apply relative overflow-hidden;
+}
+
+.bg-fixed::before {
+  @apply fixed top-0 left-0 w-screen h-lvh z-[-1] content-[""];
+  background: var(--bg-url) center/cover no-repeat;
+}
+
 .acf-block.has-fixed-bg {
-  background-attachment: fixed;
-  background-position: center;
+  // background-attachment: fixed;
+  // background-position: center;
 }
 
 .acf-block:not(.has-overlay) {
