--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -355,8 +355,19 @@ body {
 }
 
 .fixed-bg {
-  @apply w-screen h-lvh;
-  @apply bg-black/30 bg-blend-multiply;
+  // @apply w-screen h-lvh;
+  // @apply bg-black/30 bg-blend-multiply;
+  // @apply absolute top-[-120lvh] left-0 w-full h-full z-[-1]; 
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: var(--bg-url) center/cover no-repeat;
+  transform: translateY(0);
+  z-index: -1;
+  background-position: scroll;
 }
 
 // .bg-fixed::before {
@@ -365,7 +376,7 @@ body {
 // }
 
 .acf-block.has-fixed-bg {
-
+  @apply overflow-hidden;
 }
 
 .acf-block:not(.has-overlay) {
@@ -383,10 +394,6 @@ body {
 
 .parallax-bg {
   @apply w-full h-[125%] absolute top-0 left-0 bg-black/40 z-[-1] bg-center bg-blend-multiply;
-}
-
-.fixed-bg {
-  @apply absolute top-0 left-0 w-full h-full z-[-1]; 
 }
 
 .custom-accordion {
