--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -30,7 +30,7 @@
   h3 {
     @apply text-[38px] md:text-[42px] lg:text-[42px];
     //@include pixelsToResponsiveUnit(font-size, 50px, 78px, 42px);
-    @apply leading-[1.15] tracking-[-2px] mb-10;
+    @apply leading-[1.3] md:leading-[1.15] tracking-[-2px] mb-10;
   }
 
   h4 {
