--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -356,17 +356,13 @@ body {
 
 .fixed-bg {
   // @apply w-screen h-lvh;
-  // @apply bg-black/30 bg-blend-multiply;
   // @apply absolute top-[-120lvh] left-0 w-full h-full z-[-1]; 
 
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: var(--bg-url) center/cover no-repeat;
-  transform: translateY(0);
-  z-index: -1;
+  @apply absolute top-0 left-0 w-full h-lvh z-[-1] translate-y-0; 
+  background: var(--bg-mob-url) center/cover no-repeat;
+  @screen md {
+    background: var(--bg-url) center/cover no-repeat;  
+  }
   background-position: scroll;
 }
 
