--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -11,7 +11,7 @@
   //   @apply font-heading-semi;
   // }
 
-  h5, h6, p, .btn-text, .btn-text-1, .btn-text-2, .btn-text-3 {
+  h5, h6, p, .btn-text, .btn-text-1, .btn-text-2, .btn-text-3, ul li, ol li {
     @apply font-sans;
   }
 
@@ -42,7 +42,7 @@
   h5 {
     @apply text-[26px] md:text-[28px] lg:text-[28px];
     //@include pixelsToResponsiveUnit(font-size, 50px, 78px, 78px);
-    @apply leading-[1.4] tracking-[-0.5px] font-light;
+    @apply leading-[1.4] tracking-[-0.5px] mb-2 md:mb-[10px];
   }
 
   h6 {
@@ -51,7 +51,7 @@
     @apply leading-[1.4] tracking-[-0.5px] mb-5;
   }
 
-  p, .p-style {
+  p, .p-style, ul li, ol li {
     @apply text-[18px] md:text-[20px] lg:text-[20px];
     @apply leading-[1.3] tracking-normal mb-[12px] last:mb-0;
 
@@ -69,6 +69,13 @@
 
     a:not(.button) {
       @apply underline;
+    }
+  }
+
+  ul li {
+    @apply relative pl-7;
+    &::before {
+      @apply absolute content-[""] w-1 h-1 bg-[#616161] rounded block left-[13px] top-3 -translate-y-1/2;
     }
   }
   
