--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-/**
- * Theme Name: The Boatshed la Perouse Theme
- * Version: 0.0.1
- */
+/*!
+ Theme Name:   The Boatshed la Perouse Theme
+ Description:  The Boatshed la Perouse Theme
+ Author:       Dzikri Nadhimulloh
+ Author URI:   http://pictura.com.au
+ Version:      1.0.0
+*/
