--- a/src/scss/templates/_single.scss
+++ b/src/scss/templates/_single.scss
@@ -7,14 +7,17 @@
         p, ul li, ol li {
             @apply text-[#616161];
         }
-    }    
-    .wp-caption {
-        width: 100% !important;
+    }   
+
+    .acf-block.block-text {
+        .wp-caption {
+            width: 100% !important;
+            .wp-caption-text {
+                @apply hidden;
+            }
+        }
         img {
             @apply rounded-[10px] w-full;
-        }
-        .wp-caption-text {
-            @apply hidden;
         }
     }
 }
